--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -178,9 +178,29 @@ main .subpages-menu,
 
         &.menu-item-has-children {
             .portaltop {
+                height: calc(3*1.688rem + 19px);
+                display: flex;
+                flex-wrap: wrap;
+                align-content: center;
                 flex-grow: unset;
                 &:hover, &:focus {
                     border-color: var(--color-menulink-hover-bg);
+                    background-color: var(--color-menulink-hover-bg);
+                    > a {
+                        color: var(--color-menulink-hover-text);
+                        text-decoration: none;
+                        &::after {
+                            background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23FFFFFF" d="M15.6401 7.02539H12.0186V5.02539H19.0186V12.0254H17.0186V8.4754L12.1046 13.3893L10.6904 11.9751L15.6401 7.02539Z M10.9824 6.97485H4.98242V18.9749H16.9824V12.9749H14.9824V16.9749H6.98242V8.97485H10.9824V6.97485Z"/%3E%3C/svg%3E%0A');
+                        }
+                    }
+                }
+                > a {
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    height: fit-content;
+                    max-height: calc(1.688rem*3 + 16px);
                 }
             }
         }
@@ -220,7 +240,7 @@ main .subpages-menu,
                 width: 100%;
                 height: 100%;
                 padding: 10px 10px 8px 10px;
-                text-align: center;
+                text-align: left;
 
                 .no-sub:not(.no-thumb) & {
                     display: block;
