--- a/style.css
+++ b/style.css
@@ -10402,10 +10402,32 @@ main .subpages-menu a:focus svg .fallback,
   padding: 0;
 }
 .subpages-menu li.menu-item-has-children .portaltop {
+  height: calc(5.064rem + 19px);
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
   flex-grow: unset;
 }
 .subpages-menu li.menu-item-has-children .portaltop:hover, .subpages-menu li.menu-item-has-children .portaltop:focus {
   border-color: var(--color-menulink-hover-bg);
+  background-color: var(--color-menulink-hover-bg);
+}
+.subpages-menu li.menu-item-has-children .portaltop:hover > a, .subpages-menu li.menu-item-has-children .portaltop:focus > a {
+  color: var(--color-menulink-hover-text);
+  text-decoration: none;
+}
+.subpages-menu li.menu-item-has-children .portaltop:hover > a::after, .subpages-menu li.menu-item-has-children .portaltop:focus > a::after {
+  background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23FFFFFF" d="M15.6401 7.02539H12.0186V5.02539H19.0186V12.0254H17.0186V8.4754L12.1046 13.3893L10.6904 11.9751L15.6401 7.02539Z M10.9824 6.97485H4.98242V18.9749H16.9824V12.9749H14.9824V16.9749H6.98242V8.97485H10.9824V6.97485Z"/%3E%3C/svg%3E%0A');
+}
+.subpages-menu li.menu-item-has-children .portaltop > a {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  max-height: calc(5.064rem + 16px);
 }
 .subpages-menu li > p,
 .subpages-menu li .portaltop {
@@ -10444,7 +10466,7 @@ main .subpages-menu a:focus svg .fallback,
   width: 100%;
   height: 100%;
   padding: 10px 10px 8px 10px;
-  text-align: center;
+  text-align: left;
 }
 .no-sub:not(.no-thumb) .subpages-menu li > p a,
 .no-sub:not(.no-thumb) .subpages-menu li .portaltop a {
