--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -8,19 +8,22 @@
 }
 
 .slider-titel header a {
-	//Remove the underline of title on slider
+
 		text-decoration: none !important;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		display: -webkit-box;
 		-webkit-line-clamp: 1;
-		-webkit-box-orient: vertical;
-		height: 60px;
+		-webkit-box-orient: horizontal;
+		max-width: 100%;		
 		opacity: 1;
+		padding: 15px 35px;
+		white-space: nowrap;
+		font-weight: 700;
 		display: inline-block;
-		//width: 80%;
+
 		background-color: var(--color-Default);
-				padding: 11px;
+			
 		margin: 0 auto;
 		text-align: left;
 		@media (max-width: $screen-xs)  {
@@ -29,9 +32,10 @@
 			display: -webkit-box;
 			-webkit-line-clamp: 2;
 			-webkit-box-orient: vertical;
-			height: 60px;
+			height: 65px;
 			padding: 3px;
 			margin-top: 14px;
+			white-space: normal;
 		 }
 }
 
@@ -42,15 +46,11 @@
 	height: auto;
 	width: 100%;
 
-
-
 	.item {
 		position: relative;
 		overflow: hidden;
 		width: 100%;
 		height: 150px;
-		
-
 		@media (min-width: $screen-sm) {
 			height:  $slider-maxheight;
 		}
@@ -66,12 +66,11 @@
 
 		.slider-titel {
 			text-align: left;
-			font-size: 30px;
-			transition: all 1s;
-		//	background-color: var(--color-FAU);
+			font-weight: 700;
+			font-size: 2.3rem;
 			&a,
 			&:hover{
-				//transform: scale(1.025);
+
 
 			}
 			@media (min-width: $screen-sm) {
@@ -82,14 +81,10 @@
 				height: 100px;
 				overflow: hidden;
 				top:5px;
-				
 
 			}
 			header {
 				display: inline;
-				//padding: 3px;
-			
-			
 				word-break: break-word;
 				box-decoration-break: clone;
 				@media (min-width: $screen-sm) {
@@ -99,6 +94,7 @@
 			}
 		}
 		.slider-text {
+		
 			@media (min-width: $screen-sm) {
 				display: inline-block;
 			}
@@ -115,6 +111,7 @@
 				padding: 0px 4px 4px 4px;
 				margin: 0;
 				box-decoration-break: clone;
+			
 
 				@media (min-width: $screen-sm) {
 					display: inline;
@@ -126,6 +123,7 @@
 		.slider-text {
 		    max-width: 100%;
 			z-index: 19;
+		
 			width: 100%;
 			text-align: left;
 		    header, p {
@@ -187,7 +185,7 @@
 		}
 
 		@media (min-width: $screen-sm) {
-			bottom: 10px;
+			bottom: 45px;
 			top: inherit;
 			transform: none;
 		}
