#1154: Blogroll im Zickzack-Modus, pot-file update

--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -198,6 +198,11 @@
     }
 }
 
+.zigzag:nth-child(odd) {
+	.teaser-row {
+		flex-direction: row-reverse;
+	}
+}
 
 .content-inline, .entry-content, .portalpage-content, main {
     .news-more-links {
