--- a/style.css
+++ b/style.css
@@ -12107,6 +12107,121 @@ ul.assistant-tabs-nav li:last-child {
 /*-----------------------------------------------------------------------------------*/
 /* Post Content
 /*-----------------------------------------------------------------------------------*/
+.post-navigation {
+  background-color: #f3f9ff;
+  padding: 0px;
+  margin-top: 90px;
+  display: inline;
+}
+
+.nav-previous {
+  float: left;
+}
+.nav-previous a {
+  text-align: left;
+}
+.nav-previous ::before {
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  content: " ";
+  width: 1.4rem;
+  height: 1.4rem;
+  line-height: 1.4rem;
+  font-size: 0.9333333333rem;
+  background-image: inherit;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center center;
+  transform: rotate(180deg);
+  background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23222222" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+}
+
+.nav-next {
+  float: right;
+}
+.nav-next a {
+  text-align: right;
+}
+.nav-next ::before {
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  content: " ";
+  float: right;
+  width: 1.4rem;
+  height: 1.4rem;
+  line-height: 1.4rem;
+  font-size: 0.9333333333rem;
+  background-image: inherit;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center center;
+  background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23222222" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+}
+
+.nav-previous,
+.nav-next {
+  padding: 10px;
+  font-weight: bold;
+  box-shadow: none;
+  transition: initial;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 40%;
+  color: currentcolor;
+  display: inline-block;
+  border-radius: 3px;
+  background-clip: padding-box;
+  font-size: 0.937rem;
+  line-height: 1.407rem;
+  color: var(--color-button-text);
+  background-color: var(--color-button-bg);
+  border: none;
+  padding: 0.5rem 0.7rem;
+  text-decoration: none;
+  border: 1px solid var(--color-ContentBorders);
+  background: transparent;
+  color: var(--color-Text);
+  font-weight: normal;
+  text-decoration: none;
+}
+.nav-previous a,
+.nav-next a {
+  box-shadow: none;
+  text-decoration: none;
+  transition: none;
+  text-decoration-color: none;
+}
+
+.nav-previous:hover,
+.nav-next:hover {
+  background-color: var(--color-primary-ci-hell);
+  color: #fff;
+}
+.nav-previous:hover a,
+.nav-next:hover a {
+  color: #fff;
+}
+
+.nav-previous:hover a:link,
+.nav-next:hover a:link {
+  background-color: var(--color-primary-ci-hell);
+  color: #fff;
+}
+
+.nav-previous:hover a:link::before {
+  transform: rotate(180deg);
+  background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23FFFFFF" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+}
+
+.nav-next:hover a:link::before {
+  float: right;
+  background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23FFFFFF" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+}
+
 .post-image {
   text-align: center;
   float: none;
@@ -12153,6 +12268,7 @@ ul.assistant-tabs-nav li:last-child {
 
 .meta-footer {
   margin-top: 15px;
+  padding-bottom: 50px;
   font-size: 0.875rem;
   line-height: 1.313rem;
 }
@@ -12464,6 +12580,10 @@ ul.assistant-tabs-nav li:last-child {
 }
 .news-item .teaser-row .fullwidthregion {
   width: 100%;
+}
+
+.zigzag:nth-child(odd) .teaser-row {
+  flex-direction: row-reverse;
 }
 
 .content-inline .news-more-links, .entry-content .news-more-links, .portalpage-content .news-more-links, main .news-more-links {
