#1227 Die Blogroll soll auch die Kategorien und/oder Tags zeigen

--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -107,7 +107,8 @@
 		}
 	}
 	.news-meta-date {
-	    margin-left: 10px;
+	   // margin-left: 10px;
+		margin-right: 10px;
 	}
 	h2 .ext-link {
 		@include inline-block;
