--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -14,6 +14,15 @@
    margin-inline: -10%;
 }
 
+.fau-row-outisde {
+    width: 100%;
+
+}
+
+.fau-row-outisde-div {
+   margin-inline: -25%;
+}
+
 
 .post-navigation {
     background-color: #f3f9ff;
