--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -101,8 +101,7 @@
     .level2,
     .level3 {
         a {
-            color: var(--color-mainmenu-sublevel-text);
-            background-color: var(--color-mainmenu-sublevel-bg);
+            color: var(--color-mainmenu-toplevel-text);
         }
 
         a:hover,
@@ -122,7 +121,7 @@
     /* Fly-Out / secondary navigation */
     .nav-flyout {
         background-color: var(--color-mainmenu-sublevel-bg);
-        padding: 20px 0;
+        padding: 40px 0;
     }
 
     /* Portal buttons */
@@ -132,6 +131,7 @@
         @include buttonstyle();
         @include px2rem($font-size-nav-buttons);
         padding: 0.5rem 1rem;
+        margin-left: 20px;
     }
 
     ul {
@@ -145,17 +145,24 @@
 
         a {
             display: inline-block;
-            padding: 7px 20px 7px 15px;
+            padding: 7px 20px 7px 13px;
             width: 100%;
         }
     }
 
 
     .level2 {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: auto auto auto;
+        grid-gap: 0 20px;
+
         > li {
             &.has-sub {
                 page-break-inside: avoid;
                 break-inside: avoid;
+                
+                grid-row: 1 / span 4;
             }
 
             > a {
@@ -196,27 +203,28 @@
                 }
                 &.level3 a {
 		            @include px2rem($font-size-nav-level3);
-                    margin-left: 12px;
-                    border-left: 10px solid var(--color-mainmenu-sublevel-hover-bg);
                 }
             }
 
             .flyout-entries-full {
-                column-count: 3;
-                column-gap: 30px;
+                //column-count: 3;
+                //column-gap: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
                 @media (max-width: $screen-md - 1) {
-                    column-count: 2;
+                    //column-count: 2;
                 }
 
                 @media (min-width: $screen-xl) {
-                    column-count: 4;
+                    //column-count: 4;
                 }
             }
 
             .nav-flyout {
-                background: var(--color-mainmenu-sublevel-bg);
-
+                background: var(--color-white);
+                border-top: 8px solid var(--color-mainmenu-sublevel-bg);
 
                 @media (min-width: $screen-sm) {
                     min-height: 199px;
@@ -449,7 +457,7 @@
             left: 0;
             right: 0;
             overflow: hidden;
-            @include box-shadow(0 10px 10px rgba(0, 0, 0, 0.3));
+            @include box-shadow(0 4px 18px rgba(0, 0, 0, 0.05)); 
         }
     }
 }
