#1154 "Continue"-Button auf Zick-Zack-Modus neu positionieren

--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -213,6 +213,9 @@
 	.teaser-row {
 		flex-direction: row-reverse;
 	}
+	.continue{
+		text-align: left;
+	}
 }
 
 .content-inline, .entry-content, .portalpage-content, main {
