#1083 Update Hauptmenü - Mobile font change

--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -115,6 +115,11 @@
     .level3 {
         a {
             font-weight: normal;
+
+            @media (max-width: $screen-sm) {
+                font-size: 0.9rem;
+                line-height: 1.3rem;
+            }
         }
     }
 
@@ -156,7 +161,6 @@
             width: 100%;
         }
     }
-
 
     .level2 {
 
